--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <body>
 
   <header>
-    <img src="bu logo.jpeg" alt="University Logo" class="university-logo">
+    <img src="image/bu logo.jpeg" alt="University Logo" class="university-logo">
     <div class="header-text">
       <h1>BERHAMPUR UNIVERSITY</h1>
       <h2>Department of Computer Science</h2>
