--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
   <div class="copyright">
     <footer>
-      <p>&copy; 2025, Computer Science, Berhampur University.</p>
+      <p>&copy; 2025 Senior-Junior Connectivity Platform. All rights reserved.</p>
     </footer>
   </div>
 </body>
