--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <div class="buttons">
     <button onclick="window.location.href=''">Join WhatsApp Group</button>
-    <button onclick="window.location.href='contact_card.html'">Connect with Senior</button>
+    <button onclick="window.location.href='contact_card.html'">Connect with Seniors</button>
   </div>
   
 <div class="buttons">
