wp link Activate

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     * {
       box-sizing: border-box;
     }
+
     body {
       font-family: 'Segoe UI', sans-serif;
       background: #f0f4f8;
@@ -15,10 +17,12 @@
       padding: 0;
       transition: background 0.3s, color 0.3s;
     }
+
     body.dark-mode {
       background: #121212;
       color: white;
     }
+
     header {
       background: #003366;
       color: white;
@@ -29,20 +33,24 @@
       flex-wrap: wrap;
       text-align: center;
     }
+
     .university-logo {
       height: 120px;
       width: auto;
       max-width: 100%;
       margin-right: 20px;
     }
+
     .header-text {
       flex: 1;
       min-width: 200px;
     }
+
     header h1 {
       margin: 0;
       font-size: 4.5vw;
     }
+
     header h2 {
       margin: 5px 0 0;
       font-size: 3vw;
@@ -50,27 +58,33 @@
       font-family: 'Georgia', serif;
       color: #ffcc00;
     }
+
     @media (max-width: 768px) {
       header {
         flex-direction: column;
         align-items: center;
       }
+
       .university-logo {
         height: 200px;
         margin: 0 auto 10px;
       }
+
       header h1 {
         font-size: 6vw;
       }
+
       header h2 {
         font-size: 4vw;
       }
     }
+
     @media (max-width: 480px) {
       .university-logo {
         height: 50px;
       }
     }
+
     .welcome-junior {
       text-align: center;
       padding: 30px;
@@ -82,22 +96,26 @@
       margin: 20px auto;
       transition: background-color 0.3s, color 0.3s;
     }
+
     .welcome-junior h3 {
       font-size: 1.8em;
       background-color: #003366;
       color: yellowgreen;
       margin-bottom: 15px;
     }
+
     .welcome-junior p {
       margin: 10px 0;
       font-family: 'Times New Roman', Times, serif;
     }
-     
+
     .buttons {
       text-align: center;
       margin: 30px 0;
     }
-    .buttons button, .buttons a {
+
+    .buttons button,
+    .buttons a {
       padding: 10px 20px;
       margin: 10px;
       border: none;
@@ -109,24 +127,27 @@
       transition: background 0.3s;
       text-decoration: none;
     }
-    .buttons button:hover, .buttons a:hover {
+
+    .buttons button:hover,
+    .buttons a:hover {
       background-color: #0055aa;
     }
-    .copyright{
+
+    .copyright {
       text-align: center;
       background-color: #121212;
       color: #fff;
     }
   </style>
   <script>
-   function toggleDarkMode() {
+    function toggleDarkMode() {
       document.body.classList.toggle("dark-mode");
       const modeToggleBtn = document.getElementById("modeToggleBtn");
       modeToggleBtn.textContent = document.body.classList.contains("dark-mode")
         ? "Switch to Light Mode"
         : "Switch to Dark Mode";
     }
-     window.onload = () => {
+    window.onload = () => {
       paginateStudents();
       const modeToggleBtn = document.getElementById("modeToggleBtn");
       modeToggleBtn.textContent = document.body.classList.contains("dark-mode")
@@ -135,6 +156,7 @@
     };
   </script>
 </head>
+
 <body>
 
   <header>
@@ -148,17 +170,20 @@
   <!-- Welcome Junior Message -->
   <div class="welcome-junior">
     <h3>Welcome to the Department of Computer Science!</h3>
-    <p>Dear Juniors, we are thrilled to have you as part of our growing community of tech enthusiasts, innovators, and problem solvers.</p>
-    <p>As you begin your journey with us, we encourage you to explore the amazing resources, experienced faculty, and incredible opportunities that lie ahead.</p>
+    <p>Dear Juniors, we are thrilled to have you as part of our growing community of tech enthusiasts, innovators, and
+      problem solvers.</p>
+    <p>As you begin your journey with us, we encourage you to explore the amazing resources, experienced faculty, and
+      incredible opportunities that lie ahead.</p>
     <p>We are excited to help you shape your future in the ever-evolving field of Computer Science!</p>
   </div>
 
   <div class="buttons">
-    <button onclick="window.location.href=''">Join WhatsApp Group</button>
+    <button onclick="window.location.href='https://chat.whatsapp.com/JpxR11qmXTz3mUcmFShfg5?mode=r_c'">Join WhatsApp
+      Group</button>
     <button onclick="window.location.href='contact_card.html'">Connect with Seniors</button>
   </div>
-  
-<div class="buttons">
+
+  <div class="buttons">
     <button id="modeToggleBtn" onclick="toggleDarkMode()">Switch to Dark Mode</button>
   </div>
 
@@ -168,4 +193,5 @@
     </footer>
   </div>
 </body>
+
 </html>
