--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <img src="image/bu logo.jpeg" alt="University Logo" class="university-logo">
     <div class="header-text">
       <h1>BERHAMPUR UNIVERSITY</h1>
-      <h2>Department of Computer Science</h2>
+      <h2>P.G. Department of Computer Science</h2>
     </div>
   </header>
 
