--- a/contact_card.html
+++ b/contact_card.html
@@ -186,6 +186,7 @@
     .social-links a .fa-square-instagram {
       background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
       -webkit-background-clip: text;
+      background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 32px;
     }
@@ -658,7 +659,7 @@
       <div class="social-links">
         <a onclick="nofbAlert()"><i class="fa-brands fa-square-facebook"></i></a>
         <a href="https://www.instagram.com/saswat_swarup_56?igsh=MTh1azZ5NHhjdzMwaQ=="><i
-            class="fab fa-instagram"></i></a>
+            class="fa-brands fa-square-instagram"></i></a>
         <a href="https://in.linkedin.com/in/saswat22"><i class="fab fa-linkedin"></i></a>
       </div>
     </div>
